@@ -1,5 +1,6 @@
 #VERSION 0.9.1#
 
+ - minor change to css in Peak_View_Helper_Debugbar
  - added method postDispatchController() in Peak_Controller_Front
 
 #VERSION 0.9.0#
